--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=trvl_mvp_db
+DB_DATABASE=trvlmvp_db
 DB_USERNAME=root
-DB_PASSWORD=azertyuiop
+DB_PASSWORD=azerty12345
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
